fix: geohash 기반 크롤링으로 변경
